gscrot (0.60~ppa1) intrepid; urgency=low

  * added feature "grab window-section"
  * added new plugin interface
  * added new plugins
    -- pdf-export
    -- negate
    -- sepia (perl)
    -- resize
  * gui redesign
    -- scaling of main window
    -- auto-scaling of preview
    -- new toolbar
    -- new menu entries
    -- settings moved to menu  

 -- Mario Kemper <mario.kemper@googlemail.com> Tue, 16 Sep 2008 01:43:31 +0200 

gscrot (0.51.1~ppa3) intrepid; urgency=low

  * minor changes
  * added/updated translations  
  * fixed bugs
    -- 264637 

 -- Mario Kemper <mario.kemper@googlemail.com>  Fri, 05 Sep 2008 18:29:35 +0200  

gscrot (0.51~ppa5) intrepid; urgency=low

  * new features
    -- capture window by name
    -- select specific workspace to capture
  * minor changes
    -- several performance improvements
    -- some options added
  * added/updated translations  
    -- Danish
    -- Dutch
    -- French
    -- German
    -- Italian
    -- Korean
    -- Norwegian Bokmal
    -- Polish
    -- Russian
    -- Serbian
    -- Simplified Chinese
    -- Spanish
    -- Swedish
    -- Traditional Chinese
    -- Ukrainian
  * fixed bugs
    -- 262165
    -- 262206
    -- 262207
    -- 262263  

 -- Mario Kemper <mario.kemper@googlemail.com>  Mon, 01 Sep 2008 03:25:16 +0200  

gscrot (0.50.1~ppa2) intrepid; urgency=low

  * minor changes
    -- partly rewritten window-selection
    -- changed .po/.mo naming of plugins
    -- added new svg icon
  * added/updated translations
    -- Brazilian Portuguese
    -- Catalan
    -- Spanish
    -- Italian
    -- Polish
    -- Russian
    -- Swedish
    -- Traditional Chinese
    -- Ukrainian
  * fixed bugs
    -- 260146
    -- 260142
    -- 260736  
  
 -- Mario Kemper <mario.kemper@googlemail.com>  Tue, 26 Aug 2008 00:13:09 +0200  
 
gscrot (0.50~ppa4) intrepid; urgency=high

  * implemented new backend (gscrot does not depend on scrot anymore)
  * zoom for free-hand screenshot
  * gui changes