@@ -1,9 +1,12 @@
 #Listing of files being used in script gen_translation.pl
 
 #if your are setting up a new file that contains 
-#translateable string, put the relative path in this listing
+#translateable strings, put the relative path in this listing
 
 ../bin/gscrot
 ../share/gscrot/resources/modules/GScrot/Draw.pm
+../share/gscrot/resources/system/plugins/perl/gspnegate/gspnegate
+../share/gscrot/resources/system/plugins/perl/gspresize/gspresize
+../share/gscrot/resources/system/plugins/perl/gspsepia/gspsepia
 
 #End of Listing
