@@ -1,0 +1,8 @@
+#Listing of files or folders being used in script gen_translation.pl
+
+#if your are setting up a new file that contains 
+#translateable string, put the relative path in this listing
+
+../share/gscrot/resources/system/plugins/bash
+
+#End of Listing
